<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_twotone_home_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_twotone_inventory_2_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_product" />

        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_twotone_arrow_circle_down_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_sell"/>

        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_twotone_arrow_circle_up_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_purchase" />


        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_twotone_local_shipping_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_supplier"/>

        <item
            android:id="@+id/nav_usermanaje"
            android:icon="@drawable/ic_twotone_supervised_user_circle_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_user"
            android:visible="true"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_twotone_logout_24"
            android:iconTint="@color/colorDark"
            android:title="@string/menu_logout"/>
    </group>
</menu>