<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.baraka.barakamobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.baraka.barakamobile.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.baraka.barakamobile.ui.payout.PayoutFragment"
        android:label="@string/menu_purchase"
        tools:layout="@layout/fragment_payout" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.baraka.barakamobile.ui.sell.SellFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_sell"/>

    <fragment
        android:id="@+id/nav_supplier"
        android:name="com.baraka.barakamobile.ui.supplier.SupplierFragment"
        android:label="@string/menu_supplier"
        tools:layout="@layout/fragment_supplier"/>

    <fragment
        android:id="@+id/nav_usermanaje"
        android:name="com.baraka.barakamobile.ui.usermanaje.UserManajeFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user_manaje"/>
</navigation>